# web-intel

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ai_agent/v0/: ai_agent_v0.py
ai_agent/v1/: ai_agent_v1.py
data/: output.md
docs/: ARCHITECTURE.md  ROADMAP.md  architecture.md  features_to_implement.md
src/web_intel/: __init__.py  __main__.py
src/web_intel/agents/: __init__.py  base.py  factory.py  llm_client.py  ollama.py
src/web_intel/cli/: app.py
src/web_intel/cli/commands/: __init__.py  crawl.py  query.py
src/web_intel/cli/ui/: __init__.py  console.py  progress.py
src/web_intel/core/: __init__.py  agent.py  config.py  crawler.py  orchestrator.py
src/web_intel/crawlers/: __init__.py  base.py  crawl4ai.py  factory.py
src/web_intel/models/: __init__.py  crawl_result.py  query.py  session.py
src/web_intel/storage/: __init__.py  base.py  db_storage.py  factory.py  file_storage.py
src/web_intel/utils/: __init__.py  exceptions.py
tests/: conftest.py
tests/integration/: test_crawl_workflow.py
tests/mocks/: mock_agent.py
tests/unit/: test_config.py  test_factories.py  test_models.py
